--- a/Rcodes/get_results_validation.Rmd
+++ b/Rcodes/get_results_validation.Rmd
@@ -4,7 +4,7 @@ output: pdf_document
 ---
 
 ```{r setup, echo=FALSE}
-knitr::opts_knit$set(root.dir = "/mnt/research/quantgen/projects/lopezcru/G2F_RESOURCES/Rcode")
+#knitr::opts_knit$set(root.dir = "/mnt/research/quantgen/projects/lopezcru/G2F_RESOURCES/Rcode")
 
 library(ggplot2)
 library(reshape2)
@@ -36,30 +36,30 @@ pheno0$year_loc <- factor(as.character(pheno0$year_loc))
 ## Leave-one-YL-out using models M1, M2a, and M2b
 
 ```{r echo=FALSE}
-models01 <- c('M1'="YEAR+LOC+YL+G", 'M2a'="Wb+G", 'M2b'="Wb+G")
-models02 <- c('M1'="YEAR+LOC+YL", 'M2a'="Wb", 'M2b'="Wb", 'M3a'="LOC+Wb", 'M3b'="LOC+Wb")
+models1 <- c('M1'="YEAR+LOC+YL+G", 'M2a'="W1+G", 'M2b'="W2+G")
+models2 <- c('M1'="YEAR+LOC+YL", 'M2a'="W1", 'M2b'="W2", 'M3a'="LOC+W1", 'M3b'="LOC+W2")
 folds_lev <- levels(pheno$year_loc)
-YHat1 <- matrix(NA, nrow=nrow(pheno),ncol=length(models01))
-YHat2 <- matrix(NA, nrow=nrow(pheno0),ncol=length(models02))
-colnames(YHat1) <- names(models01)
-colnames(YHat2) <- names(models02)
+YHat1 <- matrix(NA, nrow=nrow(pheno),ncol=length(models1))
+YHat2 <- matrix(NA, nrow=nrow(pheno0),ncol=length(models2))
+colnames(YHat1) <- names(models1)
+colnames(YHat2) <- names(models2)
 
-for(f0 in 1:length(folds_lev))
+for(ff in 1:length(folds_lev))
 {
-  for(mm in 1:length(models01))
+  for(mm in 1:length(models1))
   {
-    filename <- paste0("../Output/run_LOO_YL/fm_YL_",folds_lev[f0],"_",names(models01)[mm],".RData")
+    filename <- paste0("../Output/run_LOO_YL/fm_YL_",folds_lev[ff],"_",names(models1)[mm],".RData")
     if(file.exists(filename)){
       load(filename)
-      YHat1[indexNA,names(models01)[mm]] <- yHat[indexNA]
+      YHat1[indexNA,names(models1)[mm]] <- yHat[indexNA]
     }
   }
-  for(mm in 1:length(models02))
+  for(mm in 1:length(models2))
   {
-    filename <- paste0("../Output/run_LOO_YL_mean/fm_YL_",folds_lev[f0],"_",names(models02)[mm],".RData")
+    filename <- paste0("../Output/run_LOO_YL_mean/fm_YL_",folds_lev[ff],"_",names(models2)[mm],".RData")
     if(file.exists(filename)){
       load(filename)
-      YHat2[indexNA,names(models02)[mm]] <- yHat[indexNA]
+      YHat2[indexNA,names(models2)[mm]] <- yHat[indexNA]
     }
   }
 
@@ -73,22 +73,24 @@ YHat2 <- data.frame(YL=pheno0$year_loc,yield=pheno0$yield,YHat2)
 
 ### Using replicates
 ```{r fig.align = 'center', fig.width=5.1, fig.height=5.5}
-for(k in 1:length(models01)){
-  tmp <- ifelse(length(grep("a",names(models01)[k]))>0," (BRR)",
-                ifelse(length(grep("b",names(models01)[k]))>0," (Bayes-C)",""))
-  xlab <- paste0("Predicted ~ ",models02[k], tmp)
-  plot_conditional(YHat1[,names(models01)[k]],YHat1$yield,xlab=xlab,ylab="Observed",cex=0.5)
+for(k in 1:length(models1)){
+  tmp <- ifelse(length(grep("a",names(models1)[k]))>0," (BRR)",
+                ifelse(length(grep("b",names(models1)[k]))>0," (Bayes-C)",""))
+  xlab <- paste0("Predicted ~ ", gsub("W1|W2","Wb",models1[k]), tmp)
+  plot_conditional(YHat1[,names(models1)[k]],YHat1$yield, quantiles=0.5, xlab=xlab,
+                   ylab="Observed",cex.axis=0.8, cex.point=0.5)
 }
 
 ```
 
 ### Using year-location means
 ```{r fig.align = 'center', fig.width=5.1, fig.height=5.5}
-for(k in 1:length(models02)){
-  tmp <- ifelse(length(grep("a",names(models02)[k]))>0," (BRR)",
-                ifelse(length(grep("b",names(models02)[k]))>0," (Bayes-C)",""))
-  xlab <- paste0("Predicted ~ ",models02[k], tmp)
-  plot_conditional(YHat2[,names(models02)[k]],YHat2$yield,xlab=xlab,ylab="Observed",cex=0.5)
+for(k in 1:length(models2)){
+  tmp <- ifelse(length(grep("a",names(models2)[k]))>0," (BRR)",
+                ifelse(length(grep("b",names(models2)[k]))>0," (Bayes-C)",""))
+  xlab <- paste0("Predicted ~ ", gsub("W1|W2","Wb",models2[k]), tmp)
+  plot_conditional(YHat2[,names(models2)[k]],YHat2$yield, quantiles=0.5, xlab=xlab,
+                   ylab="Observed", cex.axis=0.8)
 }
 
 ```
@@ -96,19 +98,18 @@ for(k in 1:length(models02)){
 ## Leave-one-YEAR-out using models M1, M2a, M2b, M3a, and M3b
 
 ```{r echo=FALSE}
-folds_lev <- levels(pheno$year)
-YHat3 <- matrix(NA, nrow=nrow(pheno0),ncol=length(models02))
-colnames(YHat3) <- names(models02)
+folds_lev <- levels(pheno0$year)
+YHat3 <- matrix(NA, nrow=nrow(pheno0),ncol=length(models2))
+colnames(YHat3) <- names(models2)
 
-for(f0 in 1:length(folds_lev))
+for(ff in 1:length(folds_lev))
 {
-  indexNA1 <- as.character(pheno0$year) == folds_lev[f0]
-  for(mm in 1:length(models02))
+  for(mm in 1:length(models2))
   {
-    filename <- paste0("../Output/run_LOO_YEAR_mean/fm_YEAR_",folds_lev[f0],"_",names(models02)[mm],".RData")
+    filename <- paste0("../Output/run_LOO_YEAR_mean/fm_YEAR_",folds_lev[ff],"_",names(models2)[mm],".RData")
     if(file.exists(filename)){
       load(filename)
-      YHat3[indexNA,names(models02)[mm]] <- yHat[indexNA]
+      YHat3[indexNA,names(models2)[mm]] <- yHat[indexNA]
     }
   }
 }
@@ -118,12 +119,12 @@ YHat3 <- data.frame(YEAR=pheno0$year, yield=pheno0$yield, YHat3)
 ```
 
 ```{r fig.align = 'center', fig.width=5.1, fig.height=5.5}
-for(k in 1:length(models02)){
-  tmp <- ifelse(length(grep("a",names(models02)[k]))>0," (BRR)",
-                ifelse(length(grep("b",names(models02)[k]))>0," (Bayes-C)",""))
-  xlab <- paste0("Predicted ~ ",models02[k], tmp)
-  plot_conditional(YHat3[,names(models02)[k]],YHat3$yield,xlab=xlab,ylab="Observed",cex=0.5)
-
+for(k in 1:length(models2)){
+  tmp <- ifelse(length(grep("a",names(models2)[k]))>0," (BRR)",
+                ifelse(length(grep("b",names(models2)[k]))>0," (Bayes-C)",""))
+  xlab <- paste0("Predicted ~ ", gsub("W1|W2","Wb",models2[k]), tmp)
+  plot_conditional(YHat3[,names(models2)[k]],YHat3$yield, quantiles=0.5, xlab=xlab,
+                   ylab="Observed", cex.axis=0.8)
 }
 
 ```
